Dockerize, add DB, add JS forms handling

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,22 +13,22 @@
     <title>Chmelovar - Vytvoř si vlastní pivo</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="{{ url_for('static', path='/images/favicon.png') }}" type="image/png">
 
     <!--====== Bootstrap css ======-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/bootstrap.min.css') }}">
 
     <!--====== Line Icons css ======-->
-    <link rel="stylesheet" href="assets/css/LineIcons.css">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/LineIcons.css') }}">
 
     <!--====== Animate css ======-->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/animate.css') }}">
 
     <!--====== Default css ======-->
-    <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/default.css') }}">
 
     <!--====== Style css ======-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
 
 
 </head>
@@ -64,7 +64,7 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="#">
-                            <img src="assets/images/hop.svg" alt="Logo">
+                            <img src="{{ url_for('static', path='/images/hop.svg') }}" alt="Logo">
                             <h1>Chmelovar</h1>
                         </a>
 
@@ -97,7 +97,7 @@
         <div class="bd-example">
             <div id="carouselOne" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item bg_cover active" style="background-image: url(assets/images/hero-background.jpg)">
+                    <div class="carousel-item bg_cover active" style="background-image: url({{ url_for('static', path='/images/hero-background.jpg)') }}">
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="row justify-content-center">
@@ -105,7 +105,7 @@
                                         <h2 class="carousel-title mb-4">Vytvoř si vlastní&nbsp;pivo</h2>
                                         <p class="carousel-description my-2">Ležák, IPA, Pšenice. Zvol si chmel, uprav recepturu.<br>Na co máš dnes chuť?</p>
                                         <ul class="carousel-btn rounded-buttons">
-                                            <li><button class="main-btn rounded-three" data-toggle="modal" data-target="#fakedoorModal">CHCI VLASTNÍ PIVO</button></li>
+                                            <li><button class="main-btn rounded-three" data-toggle="modal" data-target="#fakedoorModal" id="fakedoorModalButton">CHCI VLASTNÍ PIVO</button></li>
                                         </ul>
                                     </div>
                                 </div> <!-- row -->
@@ -126,7 +126,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-12 col-lg-12">
                     <div class="about-image text-center wow fadeInUp" data-wow-duration="0.8s" data-wow-offset="100">
-                        <img src="assets/images/beer.svg" alt="Lahve piva v ruce">
+                        <img src="{{ url_for('static', path='/images/beer.svg') }}" alt="Lahve piva v ruce">
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
                         <h4 class="title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Pro opravdové milovníky piva</h4>
@@ -138,7 +138,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.8s">
                         <div class="about-icon limit-vertical">
-                            <img src="assets/images/chemistry.svg" alt="Zkumavky s pivem u počítače">
+                            <img src="{{ url_for('static', path='/images/chemistry.svg') }}" alt="Zkumavky s pivem u počítače">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Staň se sládkem</h4>
@@ -149,7 +149,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                         <div class="about-icon limit-vertical">
-                            <img src="assets/images/gift.svg" alt="Dárková krabice">
+                            <img src="{{ url_for('static', path='/images/gift.svg') }}" alt="Dárková krabice">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Využij speciální příležitost</h4>
@@ -160,7 +160,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1s">
                         <div class="about-icon">
-                            <img src="assets/images/shipped.svg" alt="Náklaďák">
+                            <img src="{{ url_for('static', path='/images/shipped.svg') }}" alt="Náklaďák">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Pár lahví nebo náklaďák?</h4>
@@ -171,7 +171,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s">
                         <div class="about-icon limit-vertical">
-                            <img src="assets/images/pencil-case.svg" alt="Tužky a štětce">
+                            <img src="{{ url_for('static', path='/images/pencil-case.svg') }}" alt="Tužky a štětce">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Od etikety po skleničky</h4>
@@ -236,29 +236,29 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-form form-style-one mt-35 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                        <form  id="contact-form" action="assets/contact.php" method="post">
+                        <form id="contact-form" action="{{ url_for('contact') }}" method="post">
                             <div class="form-input mt-15">
                                 <label>Jméno</label>
                                 <div class="input-items default">
-                                    <input type="text" placeholder="Jméno" name="name">
+                                    <input type="text" placeholder="Jméno" name="name" autocomplete="name">
                                     <i class="lni-user"></i>
                                 </div>
                             </div> <!-- form input -->
                             <div class="form-input mt-15">
                                 <label>E-mail</label>
                                 <div class="input-items default">
-                                    <input type="email" placeholder="E-mail" name="email">
+                                    <input type="email" placeholder="E-mail" name="email" autocomplete="email">
                                     <i class="lni-envelope"></i>
                                 </div>
                             </div> <!-- form input -->
                             <div class="form-input mt-15">
                                 <label>Zpráva</label>
                                 <div class="input-items default">
-                                    <textarea placeholder="Zpráva" name="massage"></textarea>
+                                    <textarea placeholder="Zpráva" name="message"></textarea>
                                     <i class="lni-pencil-alt"></i>
                                 </div>
                             </div> <!-- form input -->
-                            <p class="form-message"></p>
+                            <div id="contact-form-message"></div>
                             <div class="form-input rounded-buttons mt-20">
                                 <button type="submit" class="main-btn rounded-three">Odeslat</button>
                             </div> <!-- form input -->
@@ -317,16 +317,23 @@
             </button>
         </div>
         <div class="modal-body call-action-area">
-            <p>Teď ještě nepřijímáme objednávky. Ale brzy to rozjedeme!</p>
-            <p class="mt-20">Pokud nám tu necháš e-mail, dáme ti vědět a <strong>dostaneš 10% slevu na první objednávku</strong>.</p>
+            <div class="d-flex">
+                <div>
+                    <p>Teď ještě nepřijímáme objednávky. Ale brzy to rozjedeme!</p>
+                    <p class="mt-20">Pokud nám tu necháš e-mail, dáme ti vědět a <strong>dostaneš 10% slevu na první objednávku</strong>.</p>
+                </div>
+                <img src="{{ url_for('static', path='/images/stars.svg') }}" alt="Hvězdy a konfety" class="ml-10 d-none d-sm-block" style="max-width:20%;">
+            </div>
             <div class="call-action-form mt-20">
-                <form action="#">
-                    <input type="email" placeholder="Tvůj e-mail" autocomplete="email">
-                    <div class="action-btn rounded-buttons">
-                        <button class="main-btn rounded-three">Chci 10% slevu</button>
-                    </div>
-                </form>
-                <p class="mt-20 mb-10">PS: Neboj, žádný spam.</p>
+                <div id="subscribeFormWrapper">
+                    <form action="{{ url_for('subscribe') }}" method="post" id="subscribeForm">
+                        <input type="email" placeholder="Tvůj e-mail" autocomplete="email" name="email">
+                        <div class="action-btn rounded-buttons">
+                            <button class="main-btn rounded-three">Chci 10% slevu</button>
+                        </div>
+                    </form>
+                    <div id="subscribeFormMessage"><p class="mt-20">PS: Neboj, žádný spam.</p></div>
+                </div>
             </div> <!-- call action form -->
         </div>
         </div>
@@ -338,25 +345,25 @@
 
 
     <!--====== jquery js ======-->
-    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="{{ url_for('static', path='/js/vendor/modernizr-3.6.0.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/vendor/jquery-1.12.4.min.js') }}"></script>
 
     <!--====== Bootstrap js ======-->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
+    <script src="{{ url_for('static', path='/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/popper.min.js') }}"></script>
 
     <!--====== Isotope js ======-->
-    <script src="assets/js/isotope.pkgd.min.js"></script>
+    <script src="{{ url_for('static', path='/js/isotope.pkgd.min.js') }}"></script>
 
     <!--====== Scrolling js ======-->
-    <script src="assets/js/scrolling-nav.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="{{ url_for('static', path='/js/scrolling-nav.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/jquery.easing.min.js') }}"></script>
 
     <!--====== wow js ======-->
-    <script src="assets/js/wow.min.js"></script>
+    <script src="{{ url_for('static', path='/js/wow.min.js') }}"></script>
 
     <!--====== Main js ======-->
-    <script src="assets/js/main.js"></script>
+    <script src="{{ url_for('static', path='/js/main.js') }}"></script>
 
 </body>
 
