--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,14 @@
     <!--====== Title ======-->
     <title>Chmelovar - Vytvoř si vlastní pivo</title>
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MRP3K7M');</script>
+    <!-- End Google Tag Manager -->
+
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="{{ url_for('static', path='/images/favicon.png') }}" type="image/png">
 
@@ -34,6 +42,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MRP3K7M"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     
     <!--====== PRELOADER PART START ======-->
 
