--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -299,7 +299,7 @@
                     <div class="col-lg-6">
                         <ul class="social text-center text-lg-right mt-10">
                             <li><a href="https://www.facebook.com/chmelovar"><i class="lni-facebook-filled"></i></a></li>
-                            <li><a href="https://www.instagram.com/chmelovar_com/"><i class="lni-instagram-original"></i></a></li>
+                            <li><a href="https://www.instagram.com/chmelovar_cz/"><i class="lni-instagram-original"></i></a></li>
                             <li><a href="https://twitter.com/chmelovar"><i class="lni-twitter-original"></i></a></li>
                         </ul> <!-- social -->
                     </div>
