--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -199,13 +199,31 @@
     </section>
 
     <!--====== ABOUT PART ENDS ======-->
+
+    <!--====== CLIENT LOGO PART START ======-->
+
+    <section id="client" class="client-logo-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section-title text-center pb-20">
+                        <h3 class="title">Kdo uvaří moje pivo?</h3>
+                        <p class="text">Z našich partnerů vybereme ten nejlepší minipivovar, který do puntíku splní tvoje požadavky. Tvůj recept zkontroluje zkušený sládek, aby vše vyšlo na jedničku.</p>
+                        <p class="text-secondary pt-80">Brzy vám představíme seznam našich partnerů!</p>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <!--====== CLIENT LOGO PART ENDS ======-->
     
     <!--====== PRINICNG STYLE EIGHT START ======-->
 
     <section id="pricing" class="pricing-area">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-7">
+                <div class="col-lg-12">
                     <div class="section-title text-center pb-20">
                         <h3 class="title">Ceník</h3>
                         <p class="text">Už víš, co budeš vařit? Výborně! Tak se pojďme podívat, kolik to bude stát.</p>
@@ -213,7 +231,7 @@
                 </div>
             </div> <!-- row -->
             <div class="row justify-content-center">
-                <div class="col-lg-7 text-center rounded-buttons">
+                <div class="col-lg-12 text-center rounded-buttons">
                     <button class="main-btn rounded-three" data-toggle="modal" data-target="#fakedoorModal" id="ctaPrice">Kolik zaplatím?</button>
                 </div>
             </div> <!-- row -->
@@ -227,7 +245,7 @@
     <section id="contact" class="contact-area">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="section-title text-center pb-20">
                         <h3 class="title">Jsme tu pro tebe</h3>
                         <p class="text">Chceš se na něco zeptat? Podělit se o skvělou recepturu? Do toho.</p>
