--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -209,8 +209,12 @@
                     <div class="section-title text-center pb-20">
                         <h3 class="title">Kdo uvaří moje pivo?</h3>
                         <p class="text">Z našich partnerů vybereme ten nejlepší minipivovar, který do puntíku splní tvoje požadavky. Tvůj recept zkontroluje zkušený sládek, aby vše vyšlo na jedničku.</p>
-                        <p class="text-secondary pt-80">Brzy vám představíme seznam našich partnerů!</p>
                     </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+            <div class="row justify-content-center">
+                <div class="col-lg-12 text-center rounded-buttons">
+                    <button class="main-btn rounded-three" data-toggle="modal" data-target="#fakedoorModal" id="ctaPartners">Zobrazit partnerské minipivovary</button>
                 </div>
             </div> <!-- row -->
         </div> <!-- container -->
