--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,6 +94,9 @@
                                     <a class="page-scroll" href="#about">Nabídka</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="page-scroll" href="#partners">Partneři</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="page-scroll" href="#pricing">Ceník</a>
                                 </li>
                                 <li class="nav-item">
@@ -200,9 +203,9 @@
 
     <!--====== ABOUT PART ENDS ======-->
 
-    <!--====== CLIENT LOGO PART START ======-->
+    <!--====== PARTNER LOGO PART START ======-->
 
-    <section id="client" class="client-logo-area">
+    <section id="partners" class="partner-logo-area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -220,7 +223,7 @@
         </div> <!-- container -->
     </section>
 
-    <!--====== CLIENT LOGO PART ENDS ======-->
+    <!--====== PARTNER LOGO PART ENDS ======-->
     
     <!--====== PRINICNG STYLE EIGHT START ======-->
 
