--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='/css/default.css') }}">
 
     <!--====== Style css ======-->
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}?version=2019-12-07-21-50-00">
 
 
 </head>
@@ -403,7 +403,7 @@
     <script src="{{ url_for('static', path='/js/wow.min.js') }}"></script>
 
     <!--====== Main js ======-->
-    <script src="{{ url_for('static', path='/js/main.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/main.js') }}?version=2019-12-07-21-50-00"></script>
 
 </body>
 
